fixed laptop spacing

--- a/src/pages/Software.module.css
+++ b/src/pages/Software.module.css
@@ -95,7 +95,7 @@
 
 .paragraphBox p, .pinkBox {
   background:rgb(255, 221, 239,0.3);
-  padding: 0.1em 1em 5rem 1em;
+  padding: 0.1em 1em 2rem 1em;
   border-radius: 12px;
   font-family: "Inter",sans-serif;
   font-weight: 200;
@@ -263,7 +263,7 @@ body {
   /* border:3px solid black ; */
   transition: 1s;
   transform:scale(2.5);
-  top: 32vh;
+  top: 33vh;
   left: 70vw;
 }
 
@@ -571,6 +571,14 @@ body {
 
   .div1{
     /* margin-top: 120px !important; */
+  }
+
+  .textBlock, .paragraphBox{
+    height: 450px;
+    /* border: solid; */
+  }
+  .paragraphBox{
+    font-size: 0.9em !important;
   }
 
 
